prometheus/ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: prometheus-ui
#   namespace: monitoring
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /testpath
#         pathType: Prefix
#         backend:
#           service:
#             name: prometheus-service
#             port:
#               number: 8080

apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: prometheus.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-service
          servicePort: 8080


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: prometheus-ui
#   namespace: monitoring
#   annotations:
#     kubernetes.io/ingress.class: nginx
# spec:
#   rules:
#   # Use the host you used in your kubernetes Ingress Configurations
#   - host: prometheus.example.com
#     http:
#       paths:
#       - backend:
#           serviceName: prometheus-service
#           servicePort: 8080
  tls:
  - hosts: 
    - prometheus.apps.shaker242.lab
    secretName: prometheus-secret
